# diffusion_renderer

./: .gitignore  AABB.cpp  AABB.h  CMakeLists.txt  Camera.cpp  Camera.h  README.md  Ray.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Utils.cpp  Utils.h  common.h  main.cpp  main.py
data/: id0的副本.txt
results/: graphviz.gv
